# TurnTurnTurn

./: .coveragerc  .gitignore  .pre-commit-config.yaml  404.html  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  README.md.backup  index.html  index.md.backup  llms.txt  mkdocs.yml  objects.inv  pre-commit-config.yaml  pyproject.toml  pytest.ini  requirements.txt  ttt_architecture_v0_15.md.backup
.github/workflows/: docs.yml
.pytest_tmp/: test_jsonl_historian_writes_ficurrent
PR1-plan/: index.html
api/: cto.md.backup
api/cto/: index.html
api/delta/: index.html
api/events/: index.html
api/hub/: index.html
api/protocols/: index.html
api/registry/: index.html
architecture/: index.html
architecture/bootstrap_lifecycle/: index.html
architecture/core_architecture/: index.html
dev-guide/: index.html
docs/: PR1-plan.md  TTT_dataclasses_v0_6.py  TTT_dataclasses_v0_8.py  TTT_specification_v0_2.md  TTT_specification_v0_4.md  dev-guide.md  index.md  ollama-extension-fix.md  ollama-extension-fix.md.backup  pr_plan_v0_20.md  ttt_architecture_v0_10.md  ttt_architecture_v0_12.md  ttt_architecture_v0_14.md  ttt_architecture_v0_14.md.backup  ttt_architecture_v0_15.md  ttt_architecture_v0_15.md:Zone.Identifier  ttt_architecture_v0_16.md  ttt_architecture_v0_16.md.backup  ttt_architecture_v0_17.md  ttt_architecture_v0_17.md:Zone.Identifier  ttt_architecture_v0_18.md  ttt_architecture_v0_19.md  ttt_architecture_v0_20.md  ttt_architecture_v0_9.md
docs/api/: cto.md  delta.md  events.md  hub.md  (+4 more)
examples/: TTT_dataclasses_v0_2.py  TTT_dataclasses_v0_4_1.py
historical/: TTT_dataclasses_v0_7.py
ollama-extension-fix/: index.html
pr_plan_v0_20/: index.html
search/: search_index.json
tests/: conftest.py  helpers.py  test_archivist.py  test_base_purpose.py  test_cto.py  test_cto_json.py  test_delta.py  test_delta_versioning.py  test_errors.py  test_events.py  test_historian.py  test_hub.py  test_hub_take_turn.py  test_jsonl_archivist_backend.py  test_persistence.py  test_profile.py  test_session_document_backend.py
ttt_architecture_v0_15/: index.html
ttt_architecture_v0_16/: index.html
ttt_architecture_v0_17/: index.html
ttt_architecture_v0_18/: index.html
ttt_architecture_v0_19/: index.html
ttt_architecture_v0_20/: index.html
(+36 files in other folders)
