[project]
name = "turnturnturn"
version = "0.0.0"
description = "TurnTurnTurn minimal scaffold"
requires-python = ">=3.12"
license = {text = "MIT"}

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "ruff>=0.2",
    "black>=24.0",
    "isort>=6.0",
    "mypy>=1.0",
    "coverage",
    "safety",
    "pip-audit",
    "pre-commit",
    # docs-as-code
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.25",
    "griffe>=0.45",
    "interrogate>=1.7",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "C90"]
ignore = ["E501", "C901"]

[tool.ruff.lint.per-file-ignores]
"docs/*.py" = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.interrogate]
# Enforce docstring coverage on public API surfaces.
# Excludes test files, __init__, __main__, and empty stub modules.
ignore-init-method = true
ignore-init-module = true
ignore-magic = true
ignore-semiprivate = false
ignore-private = false
ignore-module = false
ignore-nested-functions = false
fail-under = 10
exclude = ["tests", "docs", "scripts", "docs/historical"]
ignore-regex = ["^get$", "^mock_.*", ".*BaseClass.*", '.*\.zip']
verbose = 0
quiet = false
whitelist-regex = []
color = true

[build-system]
requires = ["setuptools>=65.0","wheel"]
build-backend = "setuptools.build_meta"
